# u-denoise

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: Dataset.ipynb
scripts/: extract_patches.py  load_raw_image.py  train_model.py
src/udenoise/: config.py
src/udenoise/data/: __init__.py  dataset.py  noise_generator.py  patch_extraction.py
src/udenoise/model/: __init__.py  double_convolution.py
src/udenoise/training/: trainer.py
