[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "u-denoise"
version = "0.1.0"
description = "A machine learning model to denoise camera RAW photos"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.0",
    "rawpy>=0.27.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/udenoise"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
